# OrderService

./: .env  .gitignore  AUTH.md  Dockerfile  REFACTORING_SUMMARY.md  TESTING_PLAN.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  dockerfile  locustfile.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 19f93d98d937_описание_изменений.py  1c812adbff36_email_verification.py  2f18073d1311_create_users_table.py  704582914134_create_users_table.py  9b6eaefaa21e_email.py
src/: celery_app.py  main.py  settings.py
src/db/: base.py  session.py
src/orderservice/: config.py  main.py
src/orderservice/api/: routers.py
src/orderservice/kafka/: config.py  consumer.py  producer.py
src/orderservice/models/: order.py
src/tasks/: email_tasks.py
src/users/: dao.py
src/users/auth/: auth.py  dependencies.py  router.py  schemas.py
src/users/models/: user.py
tests/: conftest.py  test_kafka_consumer.py  test_order_models.py  test_orders_api.py  test_refresh_token.py
tests/integration/: test_orders_integration.py
